Menambahkan satu komentar ddan satu link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat.</p>
 
+	<p>jangan sampai membuat anda lupa siapa anda bro , jangan lupa</p>
+
 	<a href="">Klik link di bawah ini</a>
+	<a href="">Link di sinih coooyyy</a>
 </body>
 </html>
